--- a/home/static/home/styl/academy.styl
+++ b/home/static/home/styl/academy.styl
@@ -28,7 +28,7 @@ $icon-color = #d8d8d8
       box-shadow: 0px 2px 30px rgba(0, 0, 0, 0.3)
       transform: scale(1.04)
       i, h1, span, b
-        color: primarycolor
+        color: academycolor
       .front
         opacity: 0
         visibility: hidden
@@ -72,7 +72,8 @@ $icon-color = #d8d8d8
         visibility: hidden
         transition: all .3s ease-in-out
         a.button
-          background: primarycolor
+          background: academycolor
+          border 1px solid black
           padding: 15px 20px
           display: inline-block
           text-decoration: none
@@ -88,7 +89,7 @@ $icon-color = #d8d8d8
           transform: translateY(20px)
           transition: all .3s ease-in-out
           &:hover
-            background: darken(primarycolor, 10%)
+            background: darken(academycolor, 10%)
 
 // Responsive
 @media(max-width: 768px)
