--- a/home/static/home/styl/enterprise.styl
+++ b/home/static/home/styl/enterprise.styl
@@ -11,7 +11,7 @@
     width: 100%
     &:hover, &:active, &:focus
         i
-            color: secondarycolor
+            color: enterprisecolor
 
     i
         margin-bottom: 2rem
@@ -29,7 +29,7 @@
     text-align left
     margin 0 1rem 3rem 1rem
     padding 40px
-    border-bottom 5px solid primarycolor 
+    border-bottom 5px solid enterprisecolor 
     border-radius 10px
 
 
