--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -1,15 +1,15 @@
 darkcolor = rgb(17, 17, 17)
 darkgraycolor = #111111
 lightgraycolor = rgb(136, 136, 136)
-primarycolor = #59d7c5
-secondarycolor = #59d7c5
+primarycolor = #29aae2
+secondarycolor = #29aae2
 filtercolor = rgba(43,73,103,0.4)
 lightbg = #f7f7f7
 mediumbg = #f0f0f0
 audiovisualcolor = #01AEF0
-enterprisecolor = #7BBA2B
-solutionscolor = #9355B1
-academycolor = #EC8115
+enterprisecolor = #88b540
+solutionscolor = #9568ab
+academycolor = #eb8c22
 
 *
     box-sizing: border-box
@@ -211,20 +211,38 @@ a
     display: flex
     flex-direction: column
     justify-content: space-between
-    align-items: flex-end
+    align-items: center
     padding: 1.5rem 2.5rem
+
+.module-title
+    height 350px
+    position relative
+    background-position center center
+    background-size cover
+    .title
+        z-index: 100
+    &.audiovisual
+        background-image url('/static/img/audiovisual-background.jpg');
+    &.enterprise
+        background-image url('/static/img/enterprise-background.jpg');
+    &.solutions
+        background-image url('/static/img/solutions-background.jpg');
+    &.academy
+        background-image url('/static/img/academy-background.jpg');
 
 .module
     height 180px
     width 100%
+    max-width 1500px
     margin .4rem 0rem
-    background-position: center
-    background-size: 100%
-    border: 2px solid black
-    border-radius: 2px
-    display: flex
-    justify-content: center
-    align-items: center
+    background-position center
+    background-size auto
+    background-repeat no-repeat
+    border 2px solid black
+    border-radius 2px
+    display flex
+    justify-content center
+    align-items center
 
     .title
         z-index: 100
@@ -248,14 +266,26 @@ a
     background-color: rgba(0,0,0,0)
     border: 0
     padding 20.5px 86px
+    &:hover
+        cursor pointer
+    &:focus
+        outline 0
     &.audiovisual
         background-image: url('/static/img/button_audiovisual0.png');
+        &:active
+            background-image: url('/static/img/button_audiovisual1.png');
     &.enterprise
         background-image: url('/static/img/button_enterprise0.png');
+        &:active
+            background-image: url('/static/img/button_enterprise1.png');
     &.solutions
         background-image: url('/static/img/button_solutions0.png');
+        &:active
+            background-image: url('/static/img/button_solutions1.png');
     &.academy
         background-image: url('/static/img/button_academy0.png');
+        &:active
+            background-image: url('/static/img/button_academy1.png');
 
 .module-logo
     width: 370px
@@ -267,9 +297,33 @@ a
     color: white
     white-space: pre-wrap
 
-@media(max-width:800px)
+@media(max-width: 1100px)
     .light-text
-        font-size: 12px
+        line-height: 22px
+
+    .section-module
+        padding: 1.5rem 1rem
+        
+    .module
+        padding 0rem .5rem
+
+@media(max-width: 900px)
+    .module-description
+        display: none
+
+@media(max-width: 700px)
+    .module-button-container
+        display: none
+
+    .module-logo
+        margin: 0rem .5rem 0rem .5rem
+
+@media(max-width: 420px)
+    .logo-image
+        display: block
+        margin-left: auto
+        margin-right: auto
+        width: 90%
 
 @media(min-width:768px)
     .page-title
