--- a/home/static/home/styl/home/header.styl
+++ b/home/static/home/styl/home/header.styl
@@ -24,6 +24,8 @@
         transition all 400ms ease
         &:hover, &:focus, &:active
             color: secondarycolor
+            &.home
+                color darkgraycolor
             &.audiovisual
                 color audiovisualcolor
             &.enterprise
