--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -31,6 +31,7 @@
                 </div>
                 <div class="header-nav">
                     <ul class="header-nav_items flex">
+                        <a class="home" href="{% url 'home' %}"><li>Home</li></a>
                         <a class="audiovisual" href="{% url 'audiovisual' %}"><li>Imagens</li></a>
                         <a class="enterprise" href="{% url 'enterprise' %}"><li>Enterprise</li></a>
                         <a class="solutions" href="{% url 'solutions' %}"><li>Soluções</li></a>
@@ -40,6 +41,7 @@
                 </div>
             </div>
             <ul class="header-nav_mobile-items flex-column">
+                <a class="home" href="{% url 'home' %}"><li>Home</li></a>
                 <a class="audiovisual" href="{% url 'audiovisual' %}"><li>Imagens</li></a>
                 <a class="enterprise" href="{% url 'enterprise' %}"><li>Enterprise</li></a>
                 <a class="solutions" href="{% url 'solutions' %}"><li>Soluções</li></a>
