--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -292,6 +292,7 @@ a
     display flex
     justify-content: center
     margin: 0rem 2rem 0rem 4rem
+    pointer-events none
 
 .module-description
     color: white
@@ -317,6 +318,7 @@ a
 
     .module-logo
         margin: 0rem .5rem 0rem .5rem
+        pointer-events auto
 
 @media(max-width: 420px)
     .logo-image
